added two more blocks to the landing page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
         <button>Sign Up</button>
         <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
     </div>
-
+    <div class="block2">
+        <h2>Some random information</h2>
+        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
+        <div class="caption">This is some subtext under an image</div>
+        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
+        <div class="caption">This is some subtext under an image</div>
+        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
+        <div class="caption">This is some subtext under an image</div>
+        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
+        <div class="caption">This is some subtext under an image</div>
+    </div>
+    <div class="block3">
+        <div class="quote">This is an inspiring quote or testimonial from a customer. Right now it's just filling up space but it can be useful to give potential customers something to reference</div>
+    </div>
+    <div class="block4">
+        <div>Call to action! It's time!</div>
+        <div>Sign up for our product by clicking that button right over there</div>
+        <button>Sign Up</button>
+    </div>
+    <footer>
+        <div>Copyright © Navraj Toor</div>
+    </footer>
 </body>
 </html>
