--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <header>
-        <div class="logo">Header Logo</div>
-        <a class="header-link" href="">header link one</a>
-        <a class="header-link" href="">header link two</a>
-        <a class="header-link" href="">header link three</a>
-    </header>
-    <div class="block1">
-        <h1>This website is awesome</h1>
-        <p1>There is going to be some subtext here under the main title. It's smaller and got a cool font</p1>
-        <button>Sign Up</button>
-        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
+    <div class="hero">
+        <header class="header">
+            <div class="logo">Header Logo</div>
+            <div class="left">
+                <a class="header-link" href="">header link one</a>
+                <a class="header-link" href="">header link two</a>
+                <a class="header-link" href="">header link three</a>
+            </div>
+        </header>
+        <div class="block1">
+            <div class="b1Info">
+                <h1>This website is awesome</h1>
+                <p1>There is going to be some subtext here under the main title. It's smaller and got a cool font. Look at that placeholder where a picture could go!</p1>
+                <button>Sign Up</button>    
+            </div>
+            <img src=img/placeholder.png>
+        </div>
     </div>
     <div class="block2">
         <h2>Some random information</h2>
@@ -39,7 +45,7 @@
         <div>Sign up for our product by clicking that button right over there</div>
         <button>Sign Up</button>
     </div>
-    <footer>
+    <footer class="footer">
         <div>Copyright © Navraj Toor</div>
     </footer>
 </body>
