finished css for block 3 and 4 of the landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="hero">
         <header class="header">
             <div class="logo">Header Logo</div>
-            <div class="left">
+            <div class="right">
                 <a class="header-link" href="">header link one</a>
                 <a class="header-link" href="">header link two</a>
                 <a class="header-link" href="">header link three</a>
@@ -26,24 +26,41 @@
             <img src=img/placeholder.png>
         </div>
     </div>
+    <h2>Some random information</h2>
     <div class="block2">
-        <h2>Some random information</h2>
-        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
-        <div class="caption">This is some subtext under an image</div>
-        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
-        <div class="caption">This is some subtext under an image</div>
-        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
-        <div class="caption">This is some subtext under an image</div>
-        <img src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg>
-        <div class="caption">This is some subtext under an image</div>
+        <div class="item">
+            <div class="p-img"><img
+                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg></div>
+            <div class="caption">This is some subtext under an image</div>
+        </div>
+        <div class="item">
+            <div class="p-img"><img
+                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg></div>
+            <div class="caption">This is some subtext under an image</div>
+        </div>
+        <div class="item">
+            <div class="p-img"><img
+                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg></div>
+            <div class="caption">This is some subtext under an image</div>
+        </div>
+        <div class="item">
+            <div class="p-img"><img
+                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg></div>
+            <div class="caption">This is some subtext under an image</div>
+        </div>
     </div>
     <div class="block3">
         <div class="quote">This is an inspiring quote or testimonial from a customer. Right now it's just filling up space but it can be useful to give potential customers something to reference</div>
+        <div class="quote-credit">-Potential Customer</div>
     </div>
     <div class="block4">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there</div>
-        <button>Sign Up</button>
+        <div class="left">
+            <h3>Call to action! It's time!</h3>
+            <p3>Sign up for our product by clicking that button right over there</p3>
+        </div>
+        <div class="call-button">
+            <button>Sign Up</button>
+        </div>    
     </div>
     <footer class="footer">
         <div>Copyright © Navraj Toor</div>
