changed image in block 2, rearranged caption, edited height and width of img

--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
                 <p1>There is going to be some subtext here under the main title. It's smaller and got a cool font. Look at that placeholder where a picture could go!</p1>
                 <button>Sign Up</button>    
             </div>
-            <img src=img/placeholder.png>
+            <img src=img/placeholder.png alt="empty image to be used as placeholder">
         </div>
     </div>
     <h2>Some random information</h2>
     <div class="block2">
         <div class="item">
             <div class="p-img"><img
-                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg></div>
+                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg width="200", height="200" alt="empty avatar image"></div>
             <div class="caption">This is some subtext under an image</div>
         </div>
         <div class="item">
             <div class="p-img"><img
-                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg></div>
+                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg width="200", height="200" alt="empty avatar image"></div>
             <div class="caption">This is some subtext under an image</div>
         </div>
         <div class="item">
             <div class="p-img"><img
-                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg></div>
+                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg width="200", height="200" alt="empty avatar image"></div>
             <div class="caption">This is some subtext under an image</div>
         </div>
         <div class="item">
             <div class="p-img"><img
-                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg></div>
+                    src=/home/navraj/repos/landing-page/img/360_F_480912365_g3nZVUdqTmt3ge6v4umbTURR2IZHwJUd.jpg width="200", height="200" alt="empty avatar image"></div>
             <div class="caption">This is some subtext under an image</div>
         </div>
     </div>
